[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Dice Sprites.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
modulate = Color( 1.4, 1.1, 1.1, 1 )
collision_layer = 4
collision_mask = 10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.933333, 0.52549, 0.584314, 1 )
rotation = 1.5708
texture = ExtResource( 2 )
hframes = 6
vframes = 3
frame = 10

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 12, -9, 14, 0, 12, 9, -4, 14, -14, 0, -4, -14 )

[node name="Hitbox" type="Area2D" parent="." groups=["aura"]]
modulate = Color( 1, 1, 1, 0.0392157 )
collision_layer = 4
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Hitbox"]
modulate = Color( 0.984314, 0.733333, 0.678431, 0.321569 )
texture = ExtResource( 2 )
hframes = 6
vframes = 3

[node name="Tween" type="Tween" parent="."]

[node name="BoostTween" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
